--- a/info.yaml
+++ b/info.yaml
@@ -46,7 +46,7 @@ pinout:
   uio[1]: "ScreenSel[1]"
   uio[2]: "ScreenSel[2]"
   uio[3]: "ScreenSel[3]"
-  uio[4]: ""
+  uio[4]: "High-Z"
   uio[5]: ""
   uio[6]: ""
   uio[7]: ""
